<resources>
    <string name="app_name">Simple Italian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_learn_word">Выучить новые слова</string>
    <string name="menu_choice">Слово-Перевод</string>
    <string name="menu_constructor">Конструктор слов</string>
    <string name="menu_add_new_word">Добавить слова</string>
    <string name="menu_my_word">Мои слова</string>
</resources>