<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_learn_word"
            android:title="@string/menu_learn_word" />
        <item
            android:id="@+id/nav_choice"
            android:title="@string/menu_choice" />
        <item
            android:id="@+id/nav_constructor"
            android:title="@string/menu_constructor" />
        <item
            android:id="@+id/nav_add_new_word"
            android:title="@string/menu_add_new_word" />
        <item
            android:id="@+id/nav_my_word"
            android:title="@string/menu_my_word" />
    </group>
</menu>