<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simpleitalian.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <!--<fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.simpleitalian.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.simpleitalian.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->
    <fragment
        android:id="@+id/nav_learn_word"
        android:name="com.example.simpleitalian.learnword.LearnWordFragment"
        android:label="@string/menu_learn_word"
        tools:layout="@layout/fragment_learn_word" />
    <fragment
        android:id="@+id/nav_choice"
        android:name="com.example.simpleitalian.choice.ChoiceFragment"
        android:label="@string/menu_choice"
        tools:layout="@layout/fragment_choice" />
    <fragment
        android:id="@+id/nav_constructor"
        android:name="com.example.simpleitalian.constructor.ConstructorFragment"
        android:label="@string/menu_constructor"
        tools:layout="@layout/fragment_constructor" />
    <fragment
        android:id="@+id/nav_add_new_word"
        android:name="com.example.simpleitalian.addnewword.AddNewWordFragment"
        android:label="@string/menu_add_new_word"
        tools:layout="@layout/fragment_add_new_word" />
    <fragment
        android:id="@+id/nav_my_word"
        android:name="com.example.simpleitalian.myword.MyWordFragment"
        android:label="@string/menu_my_word"
        tools:layout="@layout/fragment_my_word" />
</navigation>